--- a/question2.html
+++ b/question2.html
@@ -1,5 +1,5 @@
-//question 2. Build'a'simple'webpage'that'helps'users'navigate'different'web'development-related'websites.'Note:'On'
-//clicking'the'hyperlink'the'web'pages'should'open'in'a'new'tab.'Below'is'a'reference'image.
+<!--question 2. Build'a'simple'webpage'that'helps'users'navigate'different'web'development-related'websites.'Note:'On'
+clicking'the'hyperlink'the'web'pages'should'open'in'a'new'tab.'Below'is'a'reference'image.-->
 
 <!DOCTYPE html>
 <html lang="en">
