--- a/question1.html
+++ b/question1.html
@@ -1,4 +1,4 @@
-//  Question 1 . Build'a'simple'webpage'that'displays'text'as'shown'in'the'below'image.
+<!--Question 1 . Build'a'simple'webpage'that'displays'text'as'shown'in'the'below'image.-->
 
 <!DOCTYPE html>
 <html lang="en">
