--- a/question5.html
+++ b/question5.html
@@ -1,5 +1,5 @@
-//Question 5. Create'a'description'list'of'full'stack'web'development'tech'stack,'using'the'<dlH'tag.'Each'term'should'be'
-//a'tech'stack'name'and'each'description'should'be'a'brief'explanation'of'what'the'tech'stack'is'used'for&
+<!--Question 5. Create'a'description'list'of'full'stack'web'development'tech'stack,'using'the'<dlH'tag.'Each'term'should'be'
+a'tech'stack'name'and'each'description'should'be'a'brief'explanation'of'what'the'tech'stack'is'used'for&-->
 
 
   <!DOCTYPE html>
