--- a/question6.html
+++ b/question6.html
@@ -1,6 +1,6 @@
-//question 6 . Create'an'ordered'list'of'the'full'stack'web'development'tech'stack'HTML,'CSS,'and'JS.'For'each'tech'
-//stack,'create'a'table'that'lists'the'tech'stack'name,'its'primary'use'cases,'and'some'key'features'or'
-//benefits.'Below'is'a'reference'image.
+<!--question 6 . Create'an'ordered'list'of'the'full'stack'web'development'tech'stack'HTML,'CSS,'and'JS.'For'each'tech'
+stack,'create'a'table'that'lists'the'tech'stack'name,'its'primary'use'cases,'and'some'key'features'or'
+benefits.'Below'is'a'reference'image.-->
 
 <!DOCTYPE html>
 <html lang="en">
