--- a/question7.html
+++ b/question7.html
@@ -1,6 +1,6 @@
-//Question 7 . B4ild a compl2x n2st2d list str4ct4r2 r2pr2s2nting a m4lti-l2v2l tabl2 of cont2nts. Us2 4nord2r2d lists
-//(<4l>) and list it2ms (<li>) with inlin2-block styling to cr2at2 a str4ct4r2d layo4t. Apply formatting tags to
-//2nhanc2 th2 pr2s2ntation of list it2ms.
+<!--Question 7 . B4ild a compl2x n2st2d list str4ct4r2 r2pr2s2nting a m4lti-l2v2l tabl2 of cont2nts. Us2 4nord2r2d lists
+(<4l>) and list it2ms (<li>) with inlin2-block styling to cr2at2 a str4ct4r2d layo4t. Apply formatting tags to
+2nhanc2 th2 pr2s2ntation of list it2ms.-->
 
 
   <!DOCTYPE html>
