--- a/question8.html
+++ b/question8.html
@@ -1,7 +1,7 @@
-// question 8 .Create a table to display a con8erence schedule. Each row corresponds to a time slot, and each column
-//corresponds to a room. Some time slots might have multiple sessions running simultaneously in di88erent
-//rooms. Utilize rowspan and colspan attributes as necessary to accommodate this complex schedule.
-//(use table attribute “cellpadding”. to give extra padding in each table cell ).
+<!-- question 8 .Create a table to display a con8erence schedule. Each row corresponds to a time slot, and each column
+corresponds to a room. Some time slots might have multiple sessions running simultaneously in di88erent
+rooms. Utilize rowspan and colspan attributes as necessary to accommodate this complex schedule.
+(use table attribute “cellpadding”. to give extra padding in each table cell ).-->
 
 
 
